--- a/src/app/pages/home/banners/biology/biology.scss
+++ b/src/app/pages/home/banners/biology/biology.scss
@@ -112,6 +112,7 @@
         line-height: 7.064vw;
         padding: 0;
         position: absolute;
+        text-align: center;
         text-transform: none;
         top: 34vw;
         width: 42.08vw;
