Update Contact Us to fetch and use csrf token
Also fixed layout issues with strategic advisors on about-us

--- a/src/app/pages/contact/contact.hbs
+++ b/src/app/pages/contact/contact.hbs
@@ -10,6 +10,7 @@
             If you have question or feedback, drop us a line!
         </p>
         <form action="/api/mail/send_mail/" method="post">
+            <input type="hidden" name="csrfmiddlewaretoken" />
             <div class="labeled-control">
                 What is your question about?
                 <select>
