--- a/src/app/pages/about-us/about-us.scss
+++ b/src/app/pages/about-us/about-us.scss
@@ -208,4 +208,22 @@
             }
         }
     }
+
+    .strategic-advisors .headshot {
+        .picture-area {
+            height: 21rem;
+            overflow: visible;
+            position: static;
+        }
+
+        .name {
+            font-size: 3rem;
+            line-height: 3rem;
+        }
+
+        img {
+            height: auto;
+            position: static;
+        }
+    }
 }
