Re-add biology banner with video

--- a/src/app/pages/home/banners/biology/biology.hbs
+++ b/src/app/pages/home/banners/biology/biology.hbs
@@ -5,7 +5,12 @@
     <div class="diagram"></div>
     <div class="leaf"></div>
     <div class="book"></div>
+
     <div class="video-banner"></div>
+    <video class="video" autoplay>
+        <source src="images/home/subjects/biology/video.mp4" type="video/mp4" />
+    </video>
+
     <div class="square-1"></div>
     <div class="square-2"></div>
     <div class="square-3"></div>
