Adjust biology banner styles for desktop view

--- a/src/app/pages/home/banners/biology/biology.hbs
+++ b/src/app/pages/home/banners/biology/biology.hbs
@@ -2,37 +2,39 @@
     @import url(/app/pages/home/banners/biology/biology.css);
 </style>
 <div class="biology">
-    <div class="diagram flyin"></div>
-    <div class="leaf flyin"></div>
-    <div class="book flyin"></div>
+    <div class="container">
+        <div class="diagram flyin"></div>
+        <div class="leaf flyin"></div>
+        <div class="book flyin"></div>
 
-    <div class="video-banner"></div>
-    <video class="video" autoplay>
-        <source src="images/home/subjects/biology/video.mp4" type="video/mp4" />
-    </video>
+        <div class="video-banner"></div>
+        <video class="video" autoplay>
+            <source src="images/home/subjects/biology/video.mp4" type="video/mp4" />
+        </video>
 
-    <div class="square-1 flyin"></div>
-    <div class="square-2 flyin"></div>
-    <div class="square-3 flyin"></div>
-    <div class="square-4 flyin"></div>
+        <div class="square-1 flyin"></div>
+        <div class="square-2 flyin"></div>
+        <div class="square-3 flyin"></div>
+        <div class="square-4 flyin"></div>
 
-    <div class="now-i-can flyin">
-        <span>Now I can</span>
-        <span class="quote">Live the wild life</span>
-    </div>
+        <div class="now-i-can flyin">
+            <span>Now I can</span>
+            <span class="quote">Live the wild life</span>
+        </div>
 
-    <div class="subject-links flyin">
-        <ul>
-            <li>
-                <a class="btn btn-large btn-yellow explore-subject" href="/books/biology">
-                    Explore Biology
-                </a>
-            </li>
-            <li>
-                <a class="btn btn-large btn-green explore-all" href="/subjects">
-                    Explore All Subjects
-                </a>
-            </li>
-        </ul>
+        <div class="subject-links flyin">
+            <ul>
+                <li>
+                    <a class="btn btn-large btn-gold explore-subject" href="/books/biology">
+                        Explore Biology
+                    </a>
+                </li>
+                <li>
+                    <a class="btn btn-large btn-green explore-all" href="/subjects">
+                        Explore All Subjects
+                    </a>
+                </li>
+            </ul>
+        </div>
     </div>
 </div>
