--- a/src/app/pages/home/banners/biology/biology.scss
+++ b/src/app/pages/home/banners/biology/biology.scss
@@ -58,6 +58,7 @@
         background-color: rgba(color(green), 0.2);
         display: none;
         position: absolute;
+        transform: translateZ(0);
         z-index: 0;
 
         @include desktop {
@@ -125,6 +126,7 @@
         background-position: center center;
         background-repeat: no-repeat;
         background-size: contain;
+        transform: translateZ(0);
         z-index: 1;
     }
 
