--- a/src/app/pages/home/banners/biology/biology.hbs
+++ b/src/app/pages/home/banners/biology/biology.hbs
@@ -7,7 +7,7 @@
         <div class="leaf flyin"></div>
         <div class="book flyin"></div>
 
-        <div class="video-banner"></div>
+        <div class="student"></div>
 
         <div class="square-1 flyin"></div>
         <div class="square-2 flyin"></div>
