Fix Explore Biology link in home page banner

--- a/src/app/pages/home/banners/biology/biology.hbs
+++ b/src/app/pages/home/banners/biology/biology.hbs
@@ -22,7 +22,7 @@
         <div class="subject-links flyin">
             <ul>
                 <li>
-                    <a class="btn btn-large btn-gold explore-subject" href="/books/biology">
+                    <a class="btn btn-large btn-gold explore-subject" href="/details/biology">
                         Explore Biology
                     </a>
                 </li>
