--- a/src/app/pages/home/banners/biology/biology.hbs
+++ b/src/app/pages/home/banners/biology/biology.hbs
@@ -3,23 +3,23 @@
 </style>
 <div class="biology">
     <div class="container">
-        <div class="diagram flyin"></div>
-        <div class="leaf flyin"></div>
-        <div class="book flyin"></div>
+        <div class="diagram flyout"></div>
+        <div class="leaf flyout"></div>
+        <div class="book flyout"></div>
 
         <div class="student"></div>
 
-        <div class="square-1 flyin"></div>
-        <div class="square-2 flyin"></div>
-        <div class="square-3 flyin"></div>
-        <div class="square-4 flyin"></div>
+        <div class="square-1 flyout"></div>
+        <div class="square-2 flyout"></div>
+        <div class="square-3 flyout"></div>
+        <div class="square-4 flyout"></div>
 
-        <div class="now-i-can flyin">
+        <div class="now-i-can flyout">
             <span>Now I can</span>
             <span class="quote">Live the wild life</span>
         </div>
 
-        <div class="subject-links flyin">
+        <div class="subject-links flyout">
             <ul>
                 <li>
                     <a class="btn btn-large btn-gold explore-subject" href="/details/biology">
