update bio banner headline copy

--- a/src/app/pages/home/banners/biology/biology.hbs
+++ b/src/app/pages/home/banners/biology/biology.hbs
@@ -13,7 +13,7 @@
 
         <div class="now-i-can flyout">
             <span>Now I can</span>
-            <span class="quote">Live the wild life</span>
+            <span class="quote">understand my world</span>
         </div>
 
         <div class="subject-links flyout">
